--- a/src/XelsDesktopWalletApp/Views/Exchange.xaml
+++ b/src/XelsDesktopWalletApp/Views/Exchange.xaml
@@ -180,44 +180,39 @@
 
                 <StackPanel Orientation="Vertical" Grid.Row="1" Margin="0,10,0,10"  HorizontalAlignment="Center" Width="834" >
                     <Grid Height="303" Background="White" Width="834">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="134*"/>
-                            <ColumnDefinition Width="5*"/>
-                        </Grid.ColumnDefinitions>
                         <TextBlock Width="99" HorizontalAlignment="Left" FontFamily="Microsoft YaHei" Height="16" VerticalAlignment="Top" 
                                    Text="LATEST EXCHANGES" FontSize="10" Foreground="#FF9B9B9B" Margin="330,10,0,0" />
 
-                        <Grid Grid.ColumnSpan="2" x:Name="NoData">
+                        <Grid x:Name="NoData">
                             <Label Content="Looks like you haven't made any transactions yet."  HorizontalAlignment="Left"
                        FontFamily="Microsoft YaHei Light" Margin="251,34,0,80" FontSize="12" FontWeight="Bold" Foreground="#FF494747"/>
                         </Grid>
 
-                        <Grid Margin="0,20,0,-151" x:Name="ListData" Grid.ColumnSpan="2">
-                            <ListView Margin="0,18,0,178" x:Name="ExchangesList" FontSize="9" BorderThickness="0" >
-                                <ListView.View>
-                                    <GridView>
-                                        <GridViewColumn Header="Order Id" Width="150" 
-                                            DisplayMemberBinding="{Binding Path=excid}"  />
-                                        <GridViewColumn Header="Deposit" Width="150"
-                                            DisplayMemberBinding="{Binding Path=deposit_address_amount_symbol}" />
-                                        <GridViewColumn Header="Recived" Width="150" 
-                                            DisplayMemberBinding="{Binding Path=xels_address_amount}"  />
-                                        <GridViewColumn Header="Status" Width="150" 
-                                            DisplayMemberBinding="{Binding Path=showstatus}"  />
-                                        <GridViewColumn Header="" Width="150">
-                                            <GridViewColumn.CellTemplate>
-                                                <DataTemplate>
-                                                    <TextBlock FontWeight="Bold"  FontFamily="Microsoft YaHei Light" ><InlineUIContainer>
-                                                            <Button Tag="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}"  
-                                                                Content="Deposit Now" Click="DepositButton_Click" />
-                                                        </InlineUIContainer></TextBlock>
-                                                </DataTemplate>
-                                            </GridViewColumn.CellTemplate>
-                                        </GridViewColumn>
-                                    </GridView>
-                                </ListView.View>
-                                <TextBlock Text="TextBlock" TextWrapping="Wrap"/>
-                            </ListView>
+
+
+
+                        <Grid Margin="0,20,0,-151" x:Name="ListData">
+                            <DataGrid x:Name="ExchangesList" AutoGenerateColumns="False" HorizontalAlignment="Center" VerticalAlignment="Center" Width="830"
+                                      Margin="0,18,0,178" FontSize="11" BorderThickness="1" BorderBrush="Gray" RowHeight="30"
+                                      Background="LightGray" RowBackground="LightYellow" AlternatingRowBackground="LightBlue" >
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Order Id" Binding="{Binding Path=excid}" IsReadOnly="True" Width="100" />
+                                    <DataGridTextColumn Header="Deposit" Binding="{Binding Path=deposit_address_amount_symbol}" IsReadOnly="True" Width="300"  />
+                                    <DataGridTextColumn Header="Recived" Binding="{Binding Path=xels_address_amount}" IsReadOnly="True" Width="250" />
+                                    <DataGridTextColumn Header="Status" Binding="{Binding Path=showstatus}" IsReadOnly="True" Width="100"  />
+                                    <DataGridTemplateColumn Header="Action" Width="72">
+                                        <DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock FontWeight="Bold"  FontFamily="Microsoft YaHei Light" Margin="1 0 0 0" VerticalAlignment="Center"><InlineUIContainer>
+                                                    <Button Tag="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}"  
+                                                        Content="Deposit Now" Click="DepositButton_Click" Padding="1 0 1 0" />
+                                                </InlineUIContainer>
+                                                </TextBlock>
+                                            </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                    </DataGridTemplateColumn>
+                                </DataGrid.Columns>
+                            </DataGrid>
                         </Grid>
                     </Grid>
                 </StackPanel>
