--- a/src/XelsDesktopWalletApp/Views/CreateOrRestore.xaml
+++ b/src/XelsDesktopWalletApp/Views/CreateOrRestore.xaml
@@ -42,8 +42,8 @@
 
             <TextBlock Margin="0,10,0,0" Width="104" Height="61" Text="Welcome" FontWeight="Bold"  FontSize="24" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light"/>
             
-        <TextBlock Width="462" FontSize="14" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light" Opacity="0.7" TextWrapping="Wrap">
-                If you would like to create a new wallet,please click Create.If you have used the wallet before, please select Restore to recover your old wallet.</TextBlock>
+        <TextBlock Width="462" FontSize="14" HorizontalAlignment="Center" Opacity="0.7" TextWrapping="Wrap">
+                If you would like to create a new wallet, please click <Bold>Create</Bold>.If you have used the wallet before, please select <Bold>Restore</Bold> to recover your old wallet.</TextBlock>
              
             <Grid Width="420" Margin="0,20,0,0">
 
