--- a/src/XelsDesktopWalletApp/Views/CreateShowMnemonic.xaml
+++ b/src/XelsDesktopWalletApp/Views/CreateShowMnemonic.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XelsDesktopWalletApp.Views"
         mc:Ignorable="d"
-        Title="CreateShowMnemonic" Height="627" Width="829">
+        Title="CreateShowMnemonic" Height="600" Width="1100">
 
     <StackPanel>
 
         <StackPanel>
 
-            <Grid Background="LimeGreen" Margin="10" Height="100">
+            <Grid Background="Green" Margin="10" Height="100">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
@@ -32,14 +32,12 @@
             <TextBlock Margin="0,10,0,0"  Text="Secret Words" HorizontalAlignment="Center"  FontSize="28" FontFamily="Microsoft YaHei Light" />
         </Border>
 
-        <Border Margin="250 15" Background="Bisque">
+        <Border Margin="250 15" Background="LightYellow">
 
             <TextBlock TextWrapping="WrapWithOverflow" Padding="10">
-
-                <TextBlock.Text>
-                    Warning!
-                    Please write down you secrets words and passphrase. You will need both to recover your wallet in the future.
-                </TextBlock.Text>
+                    <Bold>Warning!</Bold><LineBreak/><LineBreak/>
+                    Please write down you secrets words and passphrase. You will need <Bold>both</Bold> to recover your wallet in the future.
+                
             </TextBlock> 
         </Border>
 
@@ -50,7 +48,7 @@
         </Border>
 
         <Border Margin="250 5">
-            <Button x:Name="copyClipboardButton" Click="copyClipboardButton_Click" Content="Copy" Padding="5" TextBlock.FontFamily="Microsoft YaHei Light" Background="#FF53E253" Foreground="White" BorderThickness="0" FontSize="14">
+            <Button x:Name="copyClipboardButton" Click="copyClipboardButton_Click" Content="Copy" Padding="5" TextBlock.FontFamily="Microsoft YaHei Light" Background="Green" Foreground="White" BorderThickness="0" FontSize="14">
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="5"/>
@@ -68,7 +66,7 @@
                     <ColumnDefinition Width="5*" />
                 </Grid.ColumnDefinitions>
 
-                <Button x:Name="cancelButton" Click="cancelButton_Click" Grid.Column="0" Content="Cancel" VerticalAlignment="Center" Padding="5" Margin="0 0 5 0"  TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="#FF53E253" BorderThickness="1" BorderBrush="#FF53E253" FontSize="14" RenderTransformOrigin="0.331,0.533">
+                <Button x:Name="cancelButton" Click="cancelButton_Click" Grid.Column="0" Content="Cancel" VerticalAlignment="Center" Padding="5" Margin="0 0 5 0"  TextBlock.FontFamily="Microsoft YaHei" Background="White" Foreground="Green" BorderThickness="1" BorderBrush="Green" FontSize="14" RenderTransformOrigin="0.331,0.533">
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="5"/>
@@ -76,7 +74,7 @@
                     </Button.Resources>
                 </Button>
 
-                <Button x:Name="continueButton" Click="continueButton_Click" Grid.Column="1" Content="Continue" Padding="5"  Margin="5 0 0 0"   TextBlock.FontFamily="Microsoft YaHei Light" Background="#FF53E253" Foreground="White" BorderThickness="0,0,0,0" FontSize="14">
+                <Button x:Name="continueButton" Click="continueButton_Click" Grid.Column="1" Content="Continue" Padding="5"  Margin="5 0 0 0"   TextBlock.FontFamily="Microsoft YaHei" Background="Green" Foreground="White" BorderThickness="0,0,0,0" FontSize="14">
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="5"/>
