--- a/src/XelsDesktopWalletApp/Views/Pages/AdvancedPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/AdvancedPage.xaml
@@ -19,8 +19,8 @@
                     <Grid Height="359" Background="White" Margin="0,50,0,0">
 
                         <Button Content="About" HorizontalAlignment="Center" Margin="0,79,0,0" VerticalAlignment="Top" Width="150"
-                            Click="About_Click" FontFamily="Microsoft YaHei Light" Foreground="#FF9B9B9B" Background="White" 
-                                BorderBrush="#FF9B9B9B" FontSize="12" Height="27">
+                            Click="About_Click" FontFamily="Microsoft YaHei Light" Foreground="Green" Background="White" 
+                                BorderBrush="Green" FontSize="12" Height="27">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="2"/>
@@ -28,8 +28,8 @@
                             </Button.Resources>
                         </Button>
                         <Button Content="Extended Public Key" HorizontalAlignment="Center" Margin="0,128,0,0" VerticalAlignment="Top" Width="150"
-                            Click="ExtendedPublicKey_Click" FontFamily="Microsoft YaHei Light" Foreground="#FF9B9B9B" Background="White" 
-                                BorderBrush="#FF9B9B9B" FontSize="12" Height="28">
+                            Click="ExtendedPublicKey_Click" FontFamily="Microsoft YaHei Light" Foreground="Green" Background="White" 
+                                BorderBrush="Green" FontSize="12" Height="28">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="2"/>
@@ -37,8 +37,8 @@
                             </Button.Resources>
                         </Button>
                         <Button Content="Generate Addresses" HorizontalAlignment="Center" Margin="0,182,0,0" VerticalAlignment="Top" Width="150"
-                            Click="GenerateAddresses_Click" FontFamily="Microsoft YaHei Light" Foreground="#FF9B9B9B" Background="White" 
-                                BorderBrush="#FF9B9B9B" FontSize="12" Height="27">
+                            Click="GenerateAddresses_Click" FontFamily="Microsoft YaHei Light" Foreground="Green" Background="White" 
+                                BorderBrush="Green" FontSize="12" Height="27">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="2"/>
@@ -46,8 +46,8 @@
                             </Button.Resources>
                         </Button>
                         <Button Content="Rescan Wallet" HorizontalAlignment="Center" Margin="0,232,0,0" VerticalAlignment="Top" Width="150"
-                                Click="Resync_Click" FontFamily="Microsoft YaHei Light" Foreground="#FF9B9B9B" Background="White" 
-                                BorderBrush="#FF9B9B9B" FontSize="12" Height="27">
+                                Click="Resync_Click" FontFamily="Microsoft YaHei Light" Foreground="Green" Background="White" 
+                                BorderBrush="Green" FontSize="12" Height="27">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="2"/>
@@ -58,14 +58,14 @@
                 </StackPanel>
 
                 <StackPanel Name="AboutSP" Orientation="Vertical" Margin="0,0,10,10" Grid.Column="1">
-                    <Grid Name="AboutGrid" Height="358" Background="WhiteSmoke" Margin="0,50,20,0" HorizontalAlignment="Left">
+                    <Grid Name="AboutGrid" Height="450" Background="WhiteSmoke" Margin="0,50,20,0" HorizontalAlignment="Left">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="214"></ColumnDefinition>
                             <ColumnDefinition Width="450"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
                         <StackPanel Orientation="Vertical" Margin="40,40,0,66"  Grid.Column="0" Grid.ColumnSpan="2" >
                             <Label Content="ABOUT" Height="34"  Foreground="LightGray"
-                                FontFamily="Microsoft YaHei" FontSize="16" Padding="0"/>
+                                FontFamily="Microsoft YaHei" FontSize="18" Padding="0"/>
 
                         </StackPanel>
                         <StackPanel Orientation="Vertical" Margin="0,80,0,66"  Grid.Column="0" >
@@ -126,14 +126,14 @@
                     </Grid>
                 </StackPanel>
                 <StackPanel Name="ExtendedPublicKeySP" Orientation="Vertical" Margin="0,0,10,10" Grid.Column="1">
-                    <Grid Name="ExtendedPublicKeyGrid" Height="358" Background="WhiteSmoke" Margin="0,50,20,0" HorizontalAlignment="Left">
+                    <Grid Name="ExtendedPublicKeyGrid" Height="450" Background="WhiteSmoke" Margin="0,50,20,0" HorizontalAlignment="Left">
                         <StackPanel Orientation="Vertical" Margin="50,50,50,0" HorizontalAlignment="Left"  >
                             <Label Content="EXTENDED PUBLIC KEY" Height="89"  Foreground="DarkGray"
                                 FontFamily="Microsoft YaHei" FontSize="18" Padding="0" RenderTransformOrigin="0.502,0.463"  />
                         </StackPanel>
                         <StackPanel Orientation="Vertical" Margin="50,106,50,0"  HorizontalAlignment="Right"  >
                             <Button x:Name="CopyClipboardButton" Click="CopyToClipboard_Click" Content="Copy to clipboard" Padding="5" 
-                                    TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="#FF53E253" 
+                                    TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="Green" 
                                     BorderThickness="0" FontSize="14" HorizontalAlignment="Right">
                             </Button>
                         </StackPanel>
@@ -146,7 +146,7 @@
                 </StackPanel>
 
                 <StackPanel Name="GenerateAddressesSP" Orientation="Vertical" Margin="0,0,10,10" Grid.Column="1">
-                    <Grid Name="GenerateAddressesGrid" Height="358" Background="WhiteSmoke" Margin="0,50,20,0" HorizontalAlignment="Left">
+                    <Grid Name="GenerateAddressesGrid" Height="450" Background="WhiteSmoke" Margin="0,50,20,0" HorizontalAlignment="Left">
                         <StackPanel Orientation="Vertical" Margin="50,50,50,0" HorizontalAlignment="Left"  >
                             <Label Content="GENERATE ADDRESSES" Height="89"  Foreground="DarkGray"
                                 FontFamily="Microsoft YaHei" FontSize="18" Padding="0" RenderTransformOrigin="0.502,0.463"  />
@@ -163,20 +163,57 @@
                         </StackPanel>
                         <StackPanel Orientation="Vertical" Margin="50,200,50,0"  HorizontalAlignment="Center"  >
                             <Button x:Name="GenerateButton" Click="Generate_Click" Content="Generate" Padding="5" 
-                                    TextBlock.FontFamily="Microsoft YaHei Light" Background="#FF53E253" Foreground="White" 
+                                    TextBlock.FontFamily="Microsoft YaHei Light" Background="Green" Foreground="White" 
                                     BorderThickness="0" FontSize="14" HorizontalAlignment="Center" Width="550">
                             </Button>
+                        </StackPanel>
+                        <StackPanel Orientation="Vertical" Margin="50,260,50,0"  HorizontalAlignment="Center" Height="500"  >
+                            <DataGrid x:Name="AddressList" AutoGenerateColumns="False" HorizontalAlignment="Center" VerticalAlignment="Top" 
+                              Width="750" FontSize="12" BorderThickness="0" Height="180" 
+                              Background="White" HeadersVisibility="None" GridLinesVisibility="None" IsReadOnly="True"
+                              ScrollViewer.CanContentScroll="True" 
+                              ScrollViewer.VerticalScrollBarVisibility="Auto"
+                              ScrollViewer.HorizontalScrollBarVisibility="Auto">
+                                <DataGrid.Columns >
+                                    <DataGridTextColumn Binding="{Binding Path=address}" IsReadOnly="True" Width="Auto" />
+                                    <DataGridTemplateColumn Width="Auto">
+                                        <DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock FontWeight="Bold"  FontFamily="Microsoft YaHei" Margin="1 0 0 0" VerticalAlignment="Top">
+                                                    <InlineUIContainer>
+                                                        <Button Content="Copy" Click="CopyButton_Click" Padding="10 2 10 2" FontFamily="Microsoft YaHei" Margin="10 0 0 0"
+                                                                Background="White" Foreground="Green" BorderBrush="Green"  IsEnabled="True" BorderThickness="1"
+                                                                HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="10" />
+                                                    </InlineUIContainer>
+                                                </TextBlock>
+                                            </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                    </DataGridTemplateColumn>
+                                </DataGrid.Columns>
+                                <DataGrid.CellStyle>
+                                    <Style TargetType="DataGridCell">
+                                        <Setter Property="Margin" Value="150,10,0,0"/>
+                                        <Setter Property="Foreground" Value="Black" />
+                                        <Style.Triggers>
+                                            <Trigger Property="IsSelected" Value="True">
+                                                <Setter Property="Background" Value="{x:Null}" />
+                                                <Setter Property="BorderBrush" Value="{x:Null}" />
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </DataGrid.CellStyle>
+                            </DataGrid>
                         </StackPanel>
                     </Grid>
                 </StackPanel>
 
                 <StackPanel Name="ResyncSP" Orientation="Vertical" Margin="0,0,10,10" Grid.Column="1">
-                    <Grid Name="ResyncGrid" Height="358" Background="WhiteSmoke" Margin="0,50,20,0" HorizontalAlignment="Left">
+                    <Grid Name="ResyncGrid" Height="450" Background="WhiteSmoke" Margin="0,50,20,0" HorizontalAlignment="Left">
                         <StackPanel Orientation="Vertical" Margin="50,50,50,0" HorizontalAlignment="Left"  >
                             <Label Content="RESCAN WALLET" Height="89"  Foreground="DarkGray"
                                 FontFamily="Microsoft YaHei" FontSize="18" Padding="0" RenderTransformOrigin="0.502,0.463"  />
                         </StackPanel>
-                        <StackPanel Orientation="Vertical" Margin="50,110,50,180"  HorizontalAlignment="Left" Background="LightGreen" >
+                        <StackPanel Orientation="Vertical" Margin="50,110,50,272"  HorizontalAlignment="Left" Background="LightGreen" >
                             <Label Foreground="Green"  
                                    FontFamily="Microsoft YaHei" FontSize="12" Padding="20" RenderTransformOrigin="0.502,0.463" >
                                 <TextBlock>
