--- a/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -508,7 +508,8 @@
                                             <Button Content="Import XELS &amp; BELS Address" 
                                                     Click="ImportAddrButton_Click" FontFamily="Microsoft YaHei 
                                                     Light" Foreground="Green" Background="White" 
-                                                    BorderBrush="Green" FontSize="13" FontWeight="DemiBold" >
+                                                    BorderBrush="Green" FontSize="13" FontWeight="DemiBold"
+                                                    Style="{DynamicResource MaterialDesignRaisedButton}" materialDesign:ShadowAssist.ShadowDepth="Depth3">
                                                 <Button.Resources>
                                                     <Style TargetType="{x:Type Border}">
                                                         <Setter Property="CornerRadius" Value="2"/>
@@ -613,13 +614,14 @@
                                                 <ColumnDefinition Width="Auto"/>
                                                 <ColumnDefinition Width="Auto"/>
                                             </Grid.ColumnDefinitions>
-                                            <materialDesign:PackIcon Kind="Autorenew" Height="13" Width="13" Margin="2,3,0,0" Foreground="Orange"/>
+                                            <!--<materialDesign:PackIcon Kind="Autorenew" Height="13" Width="13" Margin="2,3,0,0" Foreground="Orange"/>-->
+                                            <ProgressBar Style="{StaticResource MaterialDesignCircularProgressBar}" Value="0" IsIndeterminate="True" Height="13" Width="13" Margin="-25,1,0,0" Foreground="Orange" />
                                             <TextBlock Text="syncing" Grid.Column="0" Name="ConnectionPercentTxt"
                                                     FontFamily="Microsoft YaHei" FontSize="12" Foreground="Orange" Grid.ColumnSpan="3" Margin="15,0,184,0">
 
                                             </TextBlock>
-                                            <materialDesign:PackIcon Kind="People" Grid.Column="1" Height="13" Width="13" Margin="20,2,0,0" Foreground="Green"/>
-                                            <TextBlock Text="0"  Grid.Column="1" Name="ConnectedCountTxt" FontSize="12" Foreground="Green" Margin="40,0,10,0" ></TextBlock>
+                                            <materialDesign:PackIcon Kind="People" Grid.Column="1" Height="13" Width="13" Margin="27,2,0,0" Foreground="Green"/>
+                                            <TextBlock Text="0"  Grid.Column="1" Name="ConnectedCountTxt" FontSize="12" Foreground="Green" Margin="40,0,10,0" Padding="3,0,0,0" ></TextBlock>
                                             <Label x:Name="StakingInfo" Content="Not Stacking"  FontSize="12" Grid.Column="1" Foreground="Green" Margin="50,-4,0,0"></Label>
                                             <!--<Image Grid.Column="2"  x:Name="thumbDown" HorizontalAlignment="Left" VerticalAlignment="Center" Height="20" Width="24" Source="/Assets/Images/thumbsdown.png" Margin="-40,0,0,0" />-->
                                             <materialDesign:PackIcon Kind="DislikeOutline" Grid.Column="2"  x:Name="thumbDown" Height="15" Width="30" Margin="-40,0,0,0" Foreground="Red" VerticalAlignment="Center"/>
