--- a/src/XelsDesktopWalletApp/Views/layout/MainLayout.xaml
+++ b/src/XelsDesktopWalletApp/Views/layout/MainLayout.xaml
@@ -127,28 +127,32 @@
             </Grid>
 
             <StackPanel Grid.Row="1">
-                <Button x:Name="btnDashboard" Margin="10,-20,10,10" Background="#FF41A43C" BorderBrush="#FF41A43C" Click="btnDashboard_Click" Height="31">
+                <Button x:Name="btnDashboard" Margin="10,-20,10,10" Background="#FF41A43C" BorderBrush="#FF41A43C" Click="btnDashboard_Click" Height="31"
+                        Style="{DynamicResource MaterialDesignRaisedButton}" materialDesign:ShadowAssist.ShadowDepth="Depth3">
                     <Grid Width="150">
                         <materialDesign:PackIcon Kind="ViewDashboard" VerticalAlignment="Center" Width="25" Height="20"/>
                         <TextBlock HorizontalAlignment="Center" Text="DASHBOARD" FontFamily="Champagne &amp; Limousines"/>
                     </Grid>
                 </Button>
 
-                <Button Margin="10" Background="#FF41A43C" BorderBrush="#FF41A43C" Click="btnHistory_Click">
+                <Button Margin="10" Background="#FF41A43C" BorderBrush="#FF41A43C" Click="btnHistory_Click"
+                        Style="{DynamicResource MaterialDesignRaisedButton}" materialDesign:ShadowAssist.ShadowDepth="Depth3">
                     <Grid Width="150">
                         <materialDesign:PackIcon Kind="History" VerticalAlignment="Center"  Width="25" Height="20" />
                         <TextBlock HorizontalAlignment="Center" Text="HISTORY" FontFamily="Champagne &amp; Limousines"/>
                     </Grid>
                 </Button>
 
-                <Button x:Name="btn_Exchange" Click="btn_Exchange_Click" Margin="10" Background="#FF41A43C" BorderBrush="#FF41A43C">
+                <Button x:Name="btn_Exchange" Click="btn_Exchange_Click" Margin="10" Background="#FF41A43C" BorderBrush="#FF41A43C"
+                        Style="{DynamicResource MaterialDesignRaisedButton}" materialDesign:ShadowAssist.ShadowDepth="Depth3">
                     <Grid Width="150">
                         <materialDesign:PackIcon Kind="FindReplace" VerticalAlignment="Center"  Width="25" Height="20"/>
                         <TextBlock HorizontalAlignment="Right" Text="EXCHANGE" FontFamily="Champagne &amp; Limousines" Margin="0,0,39,0"/>
                     </Grid>
                 </Button>
 
-                <Button Name="btn_SmartContract" Margin="10" Click="btn_SmartContract_Click" Background="#FF41A43C" BorderBrush="#FF41A43C">
+                <Button Name="btn_SmartContract" Margin="10" Click="btn_SmartContract_Click" Background="#FF41A43C" BorderBrush="#FF41A43C"
+                        Style="{DynamicResource MaterialDesignRaisedButton}" materialDesign:ShadowAssist.ShadowDepth="Depth3">
                     <Grid Width="150">
                         <materialDesign:PackIcon Kind="Laptop" VerticalAlignment="Center"  Width="20" Height="20" Margin="-1,0,0,0" />
                         <TextBlock HorizontalAlignment="Left" Text="SMART CONTRACT" FontFamily="Champagne &amp; Limousines" Height="17" VerticalAlignment="Center" Margin="21,0,0,0" Width="129"/>
